--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a phycisist and entrepreneur</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Querétaro, México</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Reading</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Connecting ideas, talent and businesses</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Querétaro, México</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To better deliver value</p>
     </section>
 
     <footer id="footer">
